--- a/css/modal.css
+++ b/css/modal.css
@@ -85,7 +85,7 @@ body.no-scroll {
   top: 25px;
   width: 20px;
   height: 20px;
-  background: url(../images/close_icon.png) center no-repeat;
+  background: url(../images/main/close_icon.png) center no-repeat;
   background-size: contain;
   text-indent: -9999px;
   transition: transform 0.4s;
